# service/src/main/java/dk/kvalitetsit/hjemmebehandling/controller/PlanDefinitionController.java
@@ -20,6 +20,7 @@ import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
 
 import org.hl7.fhir.r4.model.ResourceType;
+import org.openapitools.api.PlanDefinitionApi;
 import org.openapitools.model.CreatePlanDefinitionRequest;
 import org.openapitools.model.PatchPlanDefinitionRequest;
 import org.openapitools.model.PlanDefinitionDto;
@@ -37,7 +38,7 @@ import java.util.stream.Stream;
 
 @RestController
 @Tag(name = "PlanDefinition", description = "API for manipulating and retrieving PlanDefinitions.")
-public class PlanDefinitionController extends BaseController {
+public class PlanDefinitionController extends BaseController implements PlanDefinitionApi {
     private static final Logger logger = LoggerFactory.getLogger(PlanDefinitionController.class);
 
     private final PlanDefinitionService planDefinitionService;
@@ -48,103 +49,6 @@ public class PlanDefinitionController extends BaseController {
         this.planDefinitionService = planDefinitionService;
         this.dtoMapper = dtoMapper;
         this.locationHeaderBuilder = locationHeaderBuilder;
-    }
-
-    @GetMapping(value = "/v1/plandefinition")
-    public ResponseEntity<List<PlanDefinitionDto>> getPlanDefinitions(@RequestParam("statusesToInclude") Optional<Collection<String>> statusesToInclude) {
-        try {
-            if(statusesToInclude.isPresent() && statusesToInclude.get().isEmpty()){
-                var details = ErrorDetails.PARAMETERS_INCOMPLETE;
-                details.setDetails("Statusliste blev sendt med, men indeholder ingen elementer");
-                throw new BadRequestException(details);
-            }
-
-            Collection<String> nonOptionalStatusesToInclude = statusesToInclude.orElseGet(List::of);
-            List<PlanDefinitionModel> planDefinitions = planDefinitionService.getPlanDefinitions(nonOptionalStatusesToInclude);
-
-
-            return ResponseEntity.ok(planDefinitions.stream()
-                    .map(dtoMapper::mapPlanDefinitionModel)
-                    .sorted(Comparator.comparing(PlanDefinitionDto::getLastUpdated, Comparator.nullsFirst(OffsetDateTime::compareTo).reversed()))
-                    .collect(Collectors.toList()));
-        }
-        catch(ServiceException e) {
-            logger.error("Could not look up plandefinitions", e);
-            throw toStatusCodeException(e);
-        }
-    }
-
-
-    @Operation(summary = "Create a new PlanDefinition.", description = "Create a PlanDefinition.")
-    @ApiResponses(value = {
-        @ApiResponse(responseCode = "201", description = "Successful operation.", headers = { @Header(name = "Location", description = "URL pointing to the created PlanDefinition.")}, content = @Content),
-        @ApiResponse(responseCode = "500", description = "Error during creation of PlanDefinition.", content = @Content(schema = @Schema(implementation = ErrorDto.class)))
-    })
-    @PostMapping(value = "/v1/plandefinition", consumes = { "application/json" })
-    public ResponseEntity<Void> createPlanDefinition(@RequestBody CreatePlanDefinitionRequest request) {
-        String planDefinitionId = null;
-        try {
-            PlanDefinitionModel planDefinition = dtoMapper.mapPlanDefinitionDto(request.getPlanDefinition());
-            planDefinitionId = planDefinitionService.createPlanDefinition(planDefinition);
-        }
-        catch(AccessValidationException | ServiceException e) {
-            logger.error("Error creating PlanDefinition", e);
-            throw toStatusCodeException(e);
-        }
-
-        URI location = locationHeaderBuilder.buildLocationHeader(planDefinitionId);
-        return ResponseEntity.created(location).build();
-    }
-
-    @PutMapping(value = "/v1/plandefinition")
-    public void updatePlanDefinition(PlanDefinitionDto planDefinitionDto) {
-        throw new UnsupportedOperationException();
-    }
-
-    @PatchMapping(value = "/v1/plandefinition/{id}")
-    public ResponseEntity<Void> patchPlanDefinition(@PathVariable String id, @RequestBody PatchPlanDefinitionRequest request) {
-        try {
-            String name = request.getName();
-            List<String> questionnaireIds = getQuestionnaireIds(request.getQuestionnaireIds());
-            List<ThresholdModel> thresholds = getThresholds(request.getThresholds());
-            PatchPlanDefinitionRequest.StatusEnum status = request.getStatus();
-
-            planDefinitionService.updatePlanDefinition(id, name, dtoMapper.mapPlanDefinitionStatusDto(status), questionnaireIds, thresholds);
-        }
-        catch(Exception e) {
-            throw toStatusCodeException(e);
-        }
-        return ResponseEntity.ok().build();
-    }
-
-    @PutMapping(value = "/v1/plandefinition/{id}/retire")
-    public ResponseEntity<Void> retirePlanDefinition(@PathVariable String id) {
-        try {
-            planDefinitionService.retirePlanDefinition(id);
-        }
-        catch(ServiceException se) {
-            throw toStatusCodeException(se);
-        }
-
-        return ResponseEntity.ok().build();
-    }
-
-    @Operation(
-        summary = "Checks if the plandefinition is in use by any careplans",
-        description = "Returns true if the plandefinition is in use by careplans and otherwise false if not"
-    )
-    @GetMapping(value = "/v1/plandefinition/{id}/used")
-    public ResponseEntity<Boolean> isPlanDefinitionInUse(@PathVariable String id) {
-        boolean isPlanDefinitionInUse;
-        try {
-            isPlanDefinitionInUse = !planDefinitionService.getCarePlansThatIncludes(id).isEmpty();
-        }
-        catch(ServiceException se) {
-            throw toStatusCodeException(se);
-        }
-
-        return ResponseEntity.ok().body(isPlanDefinitionInUse);
-
     }
 
     private List<String> getQuestionnaireIds(List<String> questionnaireIds) {
@@ -162,4 +66,98 @@ public class PlanDefinitionController extends BaseController {
     private <T> Stream<T> collectionToStream(Collection<T> collection) {
         return Optional.ofNullable(collection).stream().flatMap(Collection::stream);
     }
+
+    @Override
+    public ResponseEntity<Void> createPlanDefinition(CreatePlanDefinitionRequest createPlanDefinitionRequest) {
+        String planDefinitionId = null;
+        try {
+            PlanDefinitionModel planDefinition = dtoMapper.mapPlanDefinitionDto(createPlanDefinitionRequest.getPlanDefinition());
+            planDefinitionId = planDefinitionService.createPlanDefinition(planDefinition);
+        }
+        catch(AccessValidationException | ServiceException e) {
+            logger.error("Error creating PlanDefinition", e);
+            throw toStatusCodeException(e);
+        }
+
+        URI location = locationHeaderBuilder.buildLocationHeader(planDefinitionId);
+        return ResponseEntity.created(location).build();
+    }
+
+    @Override
+    public ResponseEntity<List<PlanDefinitionDto>> getPlanDefinitions(List<String> statusesToInclude) {
+        try {
+
+            if( statusesToInclude != null &&  statusesToInclude.isEmpty()){
+                var details = ErrorDetails.PARAMETERS_INCOMPLETE;
+                details.setDetails("Statusliste blev sendt med, men indeholder ingen elementer");
+                throw new BadRequestException(details);
+            }
+
+            List<PlanDefinitionModel> planDefinitions = planDefinitionService.getPlanDefinitions(statusesToInclude);
+
+            return ResponseEntity.ok(planDefinitions.stream()
+                    .map(dtoMapper::mapPlanDefinitionModel)
+                    .sorted(Comparator.comparing(PlanDefinitionDto::getLastUpdated, Comparator.nullsFirst(OffsetDateTime::compareTo).reversed()))
+                    .collect(Collectors.toList()));
+        }
+        catch(ServiceException e) {
+            logger.error("Could not look up plandefinitions", e);
+            throw toStatusCodeException(e);
+        }
+    }
+
+    @Override
+    public ResponseEntity<Boolean> isPlanDefinitionInUse(String id) {
+        boolean isPlanDefinitionInUse;
+        try {
+            isPlanDefinitionInUse = !planDefinitionService.getCarePlansThatIncludes(id).isEmpty();
+        }
+        catch(ServiceException se) {
+            throw toStatusCodeException(se);
+        }
+        return ResponseEntity.ok().body(isPlanDefinitionInUse);
+
+    }
+
+    @Override
+    public ResponseEntity<Void> patchPlanDefinition(String id, PatchPlanDefinitionRequest request) {
+        try {
+            String name = request.getName();
+            List<String> questionnaireIds = getQuestionnaireIds(request.getQuestionnaireIds());
+            List<ThresholdModel> thresholds = getThresholds(request.getThresholds());
+            PatchPlanDefinitionRequest.StatusEnum status = request.getStatus();
+
+            planDefinitionService.updatePlanDefinition(id, name, dtoMapper.mapPlanDefinitionStatusDto(status), questionnaireIds, thresholds);
+        }
+        catch(Exception e) {
+            throw toStatusCodeException(e);
+        }
+        return ResponseEntity.ok().build();
+    }
+
+    @Override
+    public ResponseEntity<Void> retirePlanDefinition(String id) {
+        try {
+            planDefinitionService.retirePlanDefinition(id);
+        }
+        catch(ServiceException se) {
+            throw toStatusCodeException(se);
+        }
+
+        return ResponseEntity.ok().build();
+    }
+
+    @Override
+    public ResponseEntity<Void> updatePlanDefinition(PlanDefinitionDto planDefinitionDto) {
+        throw new UnsupportedOperationException();
+    }
+
+
+
+
+
+
+
+
+
 }
